<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.button.MaterialButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:alpha="0"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginTop="16dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/menu_item_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/cafe_menu_item_ingredients"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="10dp"
                android:paddingVertical="9dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="190dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/green"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="16dp"
                android:text="@string/order_adding"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/black_alpha_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/recommendation"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/stroke_text_price_4dp"
                        android:paddingBottom="12dp">

                        <ImageView
                            android:id="@+id/imageViewFood1"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:src="@drawable/pancake"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewFood1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="12dp"
                            android:text="@string/cafe_menu_item_ingredients1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageViewFood1" />

                        <TextView
                            android:id="@+id/textViewPrice1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewFood1" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="12dp"
                            android:background="@drawable/back_btn_add_order_4dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/plus"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:backgroundTint="@null"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewPrice1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textViewPrice1"
                            app:layout_constraintTop_toTopOf="@+id/textViewPrice1"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/stroke_text_price_4dp"
                        android:paddingBottom="12dp">

                        <ImageView
                            android:id="@+id/imageViewFood2"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:src="@drawable/roll_cezar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewFood2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="12dp"
                            android:text="@string/cafe_menu_item_ingredients2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageViewFood2" />

                        <TextView
                            android:id="@+id/textViewPrice2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewFood2" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="12dp"
                            android:background="@drawable/back_btn_add_order_4dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/plus"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:backgroundTint="@null"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewPrice2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textViewPrice2"
                            app:layout_constraintTop_toTopOf="@+id/textViewPrice2"
                            tools:ignore="TouchTargetSizeCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="121dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/stroke_text_price_4dp"
                        android:paddingBottom="12dp">

                        <ImageView
                            android:id="@+id/imageViewFood3"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:src="@drawable/sandvich"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewFood3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="12dp"
                            android:text="@string/cafe_menu_item_ingredients3"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageViewFood3" />

                        <TextView
                            android:id="@+id/textViewPrice3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textViewFood3" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginEnd="12dp"
                            android:background="@drawable/back_btn_add_order_4dp"
                            android:gravity="center"
                            android:padding="0dp"
                            android:text="@string/plus"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            app:backgroundTint="@null"
                            app:layout_constraintBottom_toBottomOf="@+id/textViewPrice3"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textViewPrice3"
                            app:layout_constraintTop_toTopOf="@+id/textViewPrice3"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>